prevent horizontal overflow

--- a/web/src/scss/style.scss
+++ b/web/src/scss/style.scss
@@ -8,11 +8,10 @@
 
 @import "./components";
 
-canvas.gl {
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
+html {
+  max-width: 100vw;
+  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 #svg {
